--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
   "sideEffects": false,
   "typings": "dist/index.d.ts",
   "scripts": {
-    "lint:cmd": "eslint -c ./.eslintrc.js --ignore-path ./.prettierignore  --no-eslintrc",
-    "lint": "npm run lint:cmd -- 'src/**/*.ts'",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "biome check --no-errors-on-unmatched",
+    "lint:fix": "npm run lint -- --fix --unsafe",
     "dev": "node_modules/.bin/tsup --dts --watch --onSuccess 'node ./dist/index.mjs'",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules ./node_modules/.bin/jest --no-watchman",
     "test:watch": "npm run test -- --watchAll",
@@ -63,30 +62,22 @@
   },
   "homepage": "https://github.com/mjancarik/esmj-task#readme",
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@types/jest": "^29.5.4",
-    "@types/node": "^20.5.7",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "commitizen": "^4.3.0",
-    "coveralls": "^3.1.1",
+    "@biomejs/biome": "1.9.4",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.0",
+    "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
-    "conventional-changelog-cli": "^4.0.0",
+    "conventional-changelog-cli": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jasmine": "^4.1.3",
-    "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-prettier": "^5.0.0",
     "git-cz": "^4.9.0",
-    "husky": "^8.0.3",
-    "jest": "^29.6.4",
-    "jest-config": "^29.6.4",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.2",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-config": "^29.7.0",
+    "lint-staged": "^15.5.1",
     "to-mock": "^1.6.2",
-    "tsup": "^7.2.0"
+    "tsup": "^8.4.0"
   }
 }
