feat: 🎸 use scheduler.yeild and requestAnimationFrame
The scheduler.yield is used by default if env supported it. The
nextFrameYield method  use requestAnimationFrame is env supported it.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "url": "https://github.com/mjancarik/esmj-task/issues"
   },
   "lint-staged": {
-    "**/*.{ts,js,mjs}": "npm run lint:cmd"
+    "**/*.{ts,js,mjs}": "npm run lint"
   },
   "commitlint": {
     "extends": [
